# Tiktok-Ai-Product-Selection

./: .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
ai_product_radar/: __init__.py  aggregation.py  api.py  cli.py  copy_model.py  decision.py  decision_engine.py  explanations.py  growth.py  integrated_system.py  io.py  models.py  report.py  scoring.py  supply.py
ai_product_radar/api_layer/: __init__.py  auth.py  errors.py  responses.py
ai_product_radar/core/: config.py  logging.py  retry.py
ai_product_radar/crawler/: __init__.py  base.py  browser.py  config.py  cookies.py  events.py  list_crawlers.py  network.py  page_fetchers.py  pagination.py  parsers.py  proxy.py  retry.py  session.py  throttle.py  tiktok_shop.py
ai_product_radar/db/: ingestion.py  init_db.py  models.py  repository.py  session.py
ai_product_radar/pipeline/: __init__.py  normalize.py  (+2 more)
alembic/: env.py
backend/: Dockerfile  alembic.ini
config/: crawler.yaml
dashboard/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
data/: normalized_product_facts.csv  product_history.csv  sample_products.csv
sql/: schema.sql
tests/: test_backend_foundation.py  test_crawler.py  test_crawler_components.py  test_creative.py  test_d_scoring_engines.py  test_database_ingestion.py  test_decision.py  test_decision_engine.py  test_explanations.py  test_integrated_system.py  test_lifecycle.py  test_parser.py  test_pipeline.py  test_pipeline_and_api.py  test_processing.py  test_radar.py  test_scheduler.py  test_scoring.py  test_supply.py
(+141 files in other folders)
